Fauxton: fix burger
- Fix z-index issue for Firefox, the burger doesn't need an own
  width and high z-index

- Fix accidental horizontal scrollbar in resize-handler

COUCHDB-2234

--- a/src/fauxton/assets/less/fauxton.less
+++ b/src/fauxton/assets/less/fauxton.less
@@ -356,12 +356,11 @@ table.databases {
     font-size: 12px
   }
   .navbar {
-     .burger{
+     .js-burger {
         .transition(all @transitionSpeed @transitionEaseType);
         padding: 22px 0 0 18px;
         position: fixed;
         top: 0;
-        z-index: 100;
         background-color: @primaryNav;
         width: @navWidth;
         div{
@@ -380,7 +379,6 @@ table.databases {
 	     height: 110px;
 	     position: fixed;
 	     bottom: 0;
-	     width: 220px;
 	     background: #3a2c2b;
        .brand {
          .box-sizing(content-box);
@@ -403,7 +401,6 @@ table.databases {
            .icon {
               background: url(../img/minilogo.png) no-repeat 0 0;
             }
-            width: 45px;
           }
        }
        #footer-nav-links {
